# wasm-talk

./: .gitignore  PITCHME.md  PITCHME.yaml  README.md
hello-wasm/: build.sh
hello-wasm/crate/: Cargo.toml
hello-wasm/crate/src/: lib.rs
hello-wasm/web/: index.html
mandelbrot-js/web/: index.html
mandelbrot-js/web/js/: mandelbrot.js
mandelbrot-wasm/: build.sh
mandelbrot-wasm/crate/: Cargo.toml
mandelbrot-wasm/crate/src/: lib.rs
mandelbrot-wasm/web/: index.html
mandelbrot-wasm/web/js/: main.js  mandelbrot.js
mandelbrot-webgl/: package-lock.json  package.json  webpack.config.js
mandelbrot-webgl/crate/: Cargo.toml
mandelbrot-webgl/crate/src/: lib.rs  mandelbrot.frag  mandelbrot64.frag  stats.rs  util.rs  vertices.vert
mandelbrot-webgl/web/: index.html
mandelbrot-webgl/web/js/: main.js
presentation/: hello-wasm-dis.txt  hello-wasm-hex.txt  hello-wasm-tree.txt  mandelbrot-webgl-tree.txt
