[package]
name = "mandelbrot-webgl"
version = "0.1.0"
authors = ["Henrik Gustafsson <gsson@fnord.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = { version = "0.2", features = ["nightly"] }
wee_alloc = "0.4.3"
console_error_panic_hook = "0.1.5"
js-sys = "0.3"
lazy_static = "1.3.0"


[profile.release]
opt-level = "s"
lto = true

[dependencies.web-sys]
version = "0.3"
features = [
  "Performance",

  "Element",
  "Window",
  "Document",
  "HtmlElement", "HtmlDivElement", "HtmlCanvasElement",

  "Event", "MouseEvent", "EventTarget", "WheelEvent", "KeyboardEvent", "UiEvent",

  "WebGlBuffer", "WebGlProgram", "WebGlRenderingContext", "WebGlShader", "WebGlUniformLocation"
]
