[package]
name = "mandelbrot-webgl"
version = "0.1.0"
authors = ["Henrik Gustafsson <gsson@fnord.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dependencies]
cfg-if = "0.1.10"
wasm-bindgen = { version = "0.2", features = ["nightly"] }
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1"
js-sys = "0.3.35"
lazy_static = "1.4.0"


[profile.release]
opt-level = "s"
lto = "fat"
debug = false
codegen-units = 1
panic = "abort"

[dependencies.web-sys]
version = "0.3"
features = [
  "Performance",

  "Element",
  "Window",
  "Document",
  "HtmlElement", "HtmlDivElement", "HtmlCanvasElement",

  "Event", "MouseEvent", "EventTarget", "WheelEvent", "KeyboardEvent", "UiEvent",

  "WebGlBuffer", "WebGlProgram", "WebGlRenderingContext", "WebGlShader", "WebGlUniformLocation"
]
